<resources>
    <string name="app_name">myTherapy</string>
    <string name="company_name">myTherapy</string>

    <string name="login">Σύνδεση</string>
    <string name="adminLoginParameter1">ID διαχειριστή</string>
    <string name="physicianLoginParameter1">ΑΦΜ χρήστη</string>
    <string name="userLoginParameter1">ΑΜΚΑ χρήστη</string>
    <string name="LoginParameter2">Κωδικός πρόσβασης</string>

    <string name="logout">Απούνδεση</string>
    <string name="profile">Προφίλ χρήστη</string>
    <string name="notifications">Ειδοποιήσεις</string>

    <string name="street">Οδός</string>
    <string name="stNumber">Αριθμός</string>
    <string name="city">Πόλη</string>
    <string name="zipNo">Τ.Κ.</string>
    <string name="country">Χώρα</string>
    <string name="signIn">Είσοδος</string>
    <string name="clearForm">Εκκαθάριση φόρμας</string>
    <string name="welcome_message">Καλώς ορίσατε!</string>

    <string name="admin_user">Χρήστης ΠΣΦ</string>
    <string name="admin_namePhysio">Όνομα Φυσιοθεραπευτηρίου</string>
    <string name="admin_ssnPhysio">ΑΦΜ Φυσιοθεραπευτηρίου</string>
    <string name="admin_ssnError">Μη έγκυρος αριθμός ΑΦΜ</string>
    <string name="admin_emailPhysio">Διεύθυνση email</string>
    <string name="admin_addButton">Προσθήκη</string>
    <string name="admin_delButton">Διαγραφή</string>
    <string name="admin_viewUserData">Προβολή στοιχείων χρήστη</string>

    <string name="admin_service">Όνομα παροχής</string>
    <string name="admin_serviceCode">Κωδικός παροχής</string>
    <string name="admin_serviceCost">Κόστος ανα συνεδρία</string>
    <string name="admin_serviceDescription">Περιγραφή παροχής</string>

    <string name="physician_name">Όνομα</string>
    <string name="physician_lastName">Επώνυμο</string>
    <string name="physician_AMKA">ΑΜΚΑ</string>
    <string name="physician_appointment_history">Προηγούμενες επισκέψεις</string>
    <string name="physician_edit">Επεξεργασία</string>
    <string name="physician_selectService">Ενέργειες επίσκεψης</string>

    <string name="user_physio">Φυσιοθεραπευτήριο</string>
    <string name="user_service">Υπηρεσία</string>
    <string name="user_time">Ώρα</string>
    <string name="user_date">Ημερομηνία</string>
    <string name="user_appointmentState">Το ραντεβού δεν έχει επιβεβαιωθεί</string>
    <string name="user_button">Υποβολή</string>

    <string name="menu_main_1admin">Χρήστης ΠΣΦ</string>
    <string name="menu_main_2physician">Φυσιοθεραπευτήριο</string>
    <string name="menu_main_3patient">Ασθενής</string>
    <string name="menu_admin_1physicians">Φυσιοθεραπευτήρια</string>
    <string name="menu_admin_2services">Παροχές</string>
    <string name="menu_physician_1home">Αρχική</string>
    <string name="menu_physician_2calendar">Ημερολόγιο</string>
    <string name="menu_physician_3patients">Ασθενείς</string>
    <string name="menu_user_1home">Αρχική</string>
    <string name="menu_user_2financialHistory">Κινήσεις</string>

    <string name="user_welcome_message">Καλώς ορίσατε,</string>
    <string name="user_name">Όνομα ασθενή</string>
    <string name="appointmentLog">Προηγούμενες επισκέψεις</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="patient_name">Όνομα Ασθενή</string>
    <string name="patient_surname">Επώνυμο Ασθενή</string>
    <string name="patient_amka">ΑΜΚΑ Ασθενή</string>
    <string name="patient_street">Οδός</string>
    <string name="patient_streetno">Αριθμός</string>
    <string name="patient_city">Πόλη</string>
    <string name="patient_zip">Τ.Κ.</string>
    <string name="patient_addButton">Προσθήκη</string>
</resources>